--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,13 @@
 .logo{
     width: 50px;
     height: 50px;
-    border: solid 3px rgb(236, 134, 0);
 }
 
 
 body{
     display: flex;
     justify-content: center;
+    flex-direction: column;
 }
 
 header{
@@ -22,8 +22,13 @@ header{
 
 nav{
     width: 40%;
-    border: solid 3px rgb(236, 134, 0);
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+}
+
+
+main .presentacion{
+    padding: 16%;
+    background-image: url(../img/image.png);
 }
