Realice la estructura del menu

--- a/css/style.css
+++ b/css/style.css
@@ -41,11 +41,13 @@ main .presentacion{
 
 .menu .mascotas{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    
     border: solid blue 3px;
     
     div{
         text-align: center;
+        margin-right: 3%;
         border: solid red 3px;
     }
     
