--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,36 @@
+/* ---------- Fuentes que se van a utilizar ------------------ */
+@font-face {
+    font-family: "Helvetica neue";
+    src: url(../fonts/HelveticaNeueUltraLight.ttf);
+}
+@font-face {
+    font-family: 'Acumin pro';
+    src: url(../fonts/Acumin-RPro.ttf);
+}
+
+h2{
+    font-family: "Helvetica neue", Arial, Helvetica, sans-serif;
+    letter-spacing: 2px;   
+}
+
+p{
+    font-family: 'Acumin pro', Arial, Helvetica, sans-serif ;
+    font-weight: bold;
+}
+
+a{
+    text-decoration: none;
+    color: black;
+}
+
+
+/*----------------BOTONES-------------*/
 
 .logo{
     width: 50px;
     height: 50px;
 }
+
 
 
 body{
@@ -27,25 +55,30 @@ nav{
     justify-content: space-evenly;
 }
 
-
 main .presentacion{
     padding: 16%;
     background-image: url(../img/image.png);
 }
+.menu{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 .menu .seleccion{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    padding: 40px 0px 20px 0px;
+    width: 70%;
 }
 
 .menu .mascotas{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    width: 70%;
     
     div{
-        text-align: center;
-        margin-right: 3%;
-        
+        text-align: center;  
     }
     
     img{
@@ -64,19 +97,19 @@ main .presentacion{
 
 .distribuidores .texto{
     display: flex;
-    width: 100%;
-    justify-content: space-around;
+    justify-content: space-between;
+    width: 70%;
+    padding-top: 60px;
+    padding-bottom: 0px;
 }
 
 .marcas{
-    border: solid 5px blue;
-    width: 55%;
+    width: 70%;
     
 }
 
 .m1,.m2{
     width: 100%;
-    border: solid 3px rgb(4, 255, 0);
     img{
         width: 33%;
         height: 150px;
