--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,12 @@ a{
 }
 
 
-/*----------------BOTONES-------------*/
+/*----------------BOTONES Y VARIABLES-------------*/
+:root{
+    --background: #f7f4f2;
+    --backgroundHeader: #005399;
+}
+
 .boton:hover{
     color: #B65D00;
     padding-right: 20px;
@@ -69,6 +74,7 @@ a{
 }
 
 
+
 .logo{
     width: 50px;
     height: 50px;
@@ -80,12 +86,13 @@ body{
     display: flex;
     justify-content: center;
     flex-direction: column;
+    background-color: var(--background);
 }
 
 header{
     width: 100%;
     padding: 20px 0px;
-    background-color: #005399;
+    background-color: var(--backgroundHeader);
     display: flex;
     justify-content: space-around;
     align-content: center;
@@ -126,7 +133,7 @@ main .presentacion{
     
     img{
         width: 200px;
-        height: 200px;
+        height: 250px;
         border-radius: 200px;
     }
 }
