--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,10 @@
     --helvetica: "Helvetica neue", Arial, Helvetica, sans-serif;
 }
 
+h1{
+    font-family: var(--acumin);
+}
+
 h2{
     font-family: var(--helvetica);
     letter-spacing: 2px;   
@@ -202,6 +206,7 @@ main .presentacion{
 .caracteristicas{
     display: flex;
     justify-content:center;
+    padding-bottom: 40px;
 }
 
 .caracteristicas .c{
@@ -222,4 +227,48 @@ main .presentacion{
 
 .c img{
     margin-top: 2%;
+}
+
+
+.contacto{
+    padding: 200px 0px;
+    width: 100%;
+    background-image: url(../img/image.png) ;
+    text-align: center;
+    a{
+        text-decoration: underline;
+        color: #ff7300;
+        transition: 0,5;
+    }
+    h1{
+        color: white;
+    }
+}
+
+.contacto a:hover{
+    color: rgb(225, 62, 12);
+    transition: 0,5;
+}
+
+
+.textos{
+    display: flex;
+    justify-content: space-around;
+    padding: 40px 0px;
+}
+
+.politicas{
+    display: flex;
+    justify-content: space-evenly;
+    div{
+        width: 13%;
+    }
+}
+
+.redes{
+    text-align: center;
+}
+
+.redes2{
+    text-align: end;
 }
